# dvion-android

./: .gitignore  app.json  build-native.sh  eas.json  package.json
.github/workflows/: build.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/dvion/: DvionJni.kt  DvionVpnService.kt  MainActivity.kt  MainApplication.kt  VpnModule.kt  VpnPackage.kt
android/app/src/main/res/values/: strings.xml  styles.xml
dvion-core/: Cargo.toml
dvion-core/src/: crypto.rs  lib.rs  main.rs  routing.rs  transport.rs  tunnel.rs
rust-bridge/: Cargo.toml
rust-bridge/src/: lib.rs
src/: App.tsx  theme.ts
src/hooks/: useVpn.ts
src/screens/: ConnectScreen.tsx  KeysScreen.tsx  LogsScreen.tsx  StatusScreen.tsx
